@@ -4,6 +4,7 @@ Changelog
 6.0.3 (2017-XX-XX)
 ------------------
 
+ * fixed startTLS only allowed tls1.0, now allowed: tls1.0, tls1.1, tls1.2
  * n/a
 
 6.0.2 (2017-09-30)
